package com.safetynetapp.models;

public class FireStation {
  private String address;
  private String station;

}
