package com.safetynetapp.models;

import java.util.List;

public class MedicalRecord {
  private String firstName;
  private String lastName;
  private String birthdate;
  private List<String> medications;
  private List<String> allergies;

}