package com.safetynetapp.models;

import java.util.List;

public class PhoneAlertInfoResponse {

  private List<String> phoneNumbers;

  public List<String> getPhoneNumbers() {
    return phoneNumbers;
  }

  public void setPhoneNumbers(List<String> phoneNumbers) {
    this.phoneNumbers = phoneNumbers;
  }
}
