package com.safetynetapp.models;


public class SummaryChildrenAndAdultsServiced {

  private int children;
  private int adults;

  public int getChildren() {
    return children;
  }

  public void setChildren(int children) {
    this.children = children;
  }

  public int getAdults() {
    return adults;
  }

  public void setAdults(int adults) {
    this.adults = adults;
  }
}
