package com.safetynetapp.models;

public class FireStationMappingDeleteRequest {

  private String address;

  public FireStationMappingDeleteRequest(String s) {
  }

  public FireStationMappingDeleteRequest() {
  }

  public String getAddress() {
    return address;
  }

  public void setAddress(String address) {
    this.address = address;
  }

}
